fixed ssome spacing

--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body{
 
 #title{
     margin: auto;
-    margin-top: 8rem;
+    margin-top: 10rem !important;
     margin-bottom: 4rem !important;
     text-align: center;
     padding: 0% !important;
